--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyTest",
+  "name": "MyTask",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,14 +15,14 @@
     "@react-navigation/native-stack": "^6.9.0",
     "date-fns": "^2.29.3",
     "react": "18.1.0",
-    "react-native": "0.70.1",
+    "react-native": "0.70.2",
     "react-native-date-picker": "^4.2.5",
     "react-native-gesture-handler": "^2.6.1",
-    "react-native-reanimated": "^3.0.0-rc.3",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-wheel-color-picker": "^1.2.0"
   },
